[package]
name = "token_editor"
version = "0.2.0"
authors = ["Felix Kohlgrüber <felix.kohlgrueber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version="0.20", features=["csr"] }
web-sys = { version = "0.3.61", features = ["DomRect"]}
prettyplease = "0.2.4"
syn = { version = "2.0.13", features = ["full"] }
